--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,16 +4,13 @@
 #   compatability issues with nvidia GPU.
 # ========
 
-
 #                                    !!MONITORS!!                                   #
 # --------------------------------------------------------------------------------- #
 #                                    !!MONITORS!!                                   #
 
 # Make sure to customize monitors! This is just my setup so you get an idea.
 # run `hyprctl monitors all` to see all your monitors!!!
-monitor=DP-1, 1920x1080@144.00, 0x250, 1
-monitor=DP-3, 2560x1440@164.84, 1920x0, 1
-monitor=HDMI-A-2, 3840x2160@59.99700, 4480x0, 1
+monitor=eDP-2, 1920x1200@165.00,auto, 1
 
 
 # Startup programs, these are mine, most likely you'll have these as well.
@@ -22,7 +19,8 @@ exec-once = hyprpaper
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar
 exec-once = $HOME/.config/eww/scripts/start.sh
-
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication dialogue for GUI apps
+exec-once = mako #for brightness noti
 
 
 # Default programs, these are what I prefer.
@@ -45,7 +43,7 @@ env = HYPRCURSOR_SIZE,24
 # Example keyboard/mouse input settings.
 input {
     # Switch layout with pressing: alt + shift
-    kb_layout = us,se
+    kb_layout = us
     kb_options = grp:alt_shift_toggle
 
     # Set as needed
@@ -59,7 +57,7 @@ input {
     sensitivity = 0 
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -74,9 +72,24 @@ cursor {
 #                                    !!DESIGN!!                                     #
 
 animations {
-    enabled = false
+    enabled = true
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0, 0, 1
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = fluent_decel, 0.1, 1, 0, 1
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    animation = windows, 1, 3, md3_decel, popin 60%
+    animation = border, 1, 10, default
+    animation = fade, 1, 2.5, md3_decel
+    animation = workspaces, 1, 3.5, easeOutExpo, slide
+    animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
-
 # The gaps between windows, as well as border colors.
 # proportional to the taskbar values.
 general {
@@ -103,11 +116,11 @@ general {
 # Window Decorations! Shadow, Blur, etc.
 decoration {
     # 8px same as taskbar, change if wanted.
-    rounding = 0
+    rounding = 8
 
     # I want transparancy to not change, since we have the colored border.
-    active_opacity = 1.0
-    inactive_opacity = 1
+    active_opacity = 0.9
+    inactive_opacity = 0.8
 
     # Window Shadow
     shadow:enabled = true
@@ -116,7 +129,7 @@ decoration {
     shadow:color = rgba(0,0,0,0.2)
 
     # Transparent Window Blur
-    blur:enabled = false
+    blur:enabled = true
 }
 
 # Read https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more info on dwindle layout.
@@ -149,9 +162,13 @@ gestures {
 
 # Windows key / Super key is the main modifier key. (abbreviated as mod)
 $mainMod = SUPER
+$spotify=spotify --enable-features=UseOzonePlatform --ozone-platform=x11
+
 
 # mod + enter = start terminal
 bind = $mainMod, Return, exec, $terminal
+# mod + S = Spotify with wayland 
+bind = $mainMod, S, exec, $spotify
 # mod + Q = kill current focused application
 bind = $mainMod, Q, killactive,
 # mod + shift + S = take screenshot of area, MUST HAVE HYPRSHOT INSTALLED!
@@ -163,7 +180,30 @@ bind = $mainMod SHIFT, SPACE, togglefloating
 # mod + F = toggle focused window to full-screen view.
 bind = $mainMod, F, fullscreen
 # mod + D = toggle application launcher (I prefer wofi).
-bind = $mainMod, D, exec, $menu
+bind = $mainMod, A, exec, $menu
+
+#WIndow management 
+# █▀▀ █▀█ █▀▀ █░█ █▀
+# █▀░ █▄█ █▄▄ █▄█ ▄█
+bind = SUPER, h, movefocus, l
+bind = SUPER, l, movefocus, r
+bind = SUPER, k, movefocus, u
+bind = SUPER, j, movefocus, d
+
+# █▀▄▀█ █▀█ █░█ █▀▀
+# █░▀░█ █▄█ ▀▄▀ ██▄
+bind = SUPER SHIFT, left, movewindow, l
+bind = SUPER SHIFT, right, movewindow, r
+bind = SUPER SHIFT, up, movewindow, u
+bind = SUPER SHIFT, down, movewindow, d
+
+
+# █▀█ █▀▀ █▀ █ ▀█ █▀▀
+# █▀▄ ██▄ ▄█ █ █▄ ██▄
+bind = SUPER CTRL, left, resizeactive, -20 0
+bind = SUPER CTRL, right, resizeactive, 20 0
+bind = SUPER CTRL, up, resizeactive, 0 -20
+bind = SUPER CTRL, down, resizeactive, 0 20
 
 
 # Switch current workspaces with mainMod + [0-9]
